# brennanhurdgmail

./: .env.example  Makefile  README.md  docker-compose.yml
.kamal/: secrets
config/: deploy.yml
docs/: DEPLOY.md  IMPLEMENTATION_NOTES.md  RULES.md
lahman-api/: Dockerfile  pyproject.toml
lahman-api/app/: classifiers.py  db.py  engine.py  lookups.py  main.py
lahman-api/app/sql/: envelope.sql
lahman-api/app/sql/conditions/: allstar.sql  award.sql  born_country.sql  born_outside_us.sql  hall_of_fame.sql  negro_leagues.sql  no_hitter.sql  one_team.sql  played_mlb.sql  position.sql  stat_compound.sql  stat_count.sql  stat_rate.sql  team.sql  team_allstar.sql  team_award.sql  team_position.sql  team_stat_compound.sql  team_stat_count.sql  team_stat_rate.sql  team_ws_champ.sql  war_career.sql  ws_champ.sql
lahman-api/scripts/: debug_question.py
lahman-api/tests/: conftest.py  test_combinations.py  test_smoketest.py  test_structure.py
lahman-api/tests/corpus/: all_grid_questions.json
lahman-db/: Dockerfile
lahman-db/init/: 01_schema.sql  02_load.sql  03_views.sql
lahman-db/lahman_1871-2025_csv/: CareerWar.csv  NoHitters.csv
