[project]
name = "lahman-api"
version = "2.0.0"
description = "FastAPI service answering Immaculate Grid questions from the Lahman database."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary]",
    "psycopg-pool",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
